[package]
name = "check_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.60"
clap = { version = "3.0.0-rc.8" , features = ["derive"] }
structopt = "0.3"
serde = { version = "1.0", features =["derive"]}
json_value_remove = "1.0"
[dependencies.uuid]
version = "1.2.2"
